--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ PORT = 5020
 CLOUDINARY_CLOUD_NAME=dpxe3s7pt
 CLOUDINARY_API_KEY=736465974153416
 CLOUDINARY_API_SECRET=l0PjiwqMZVohl4vDi34VlMKnygc
+
+MONGODB_URI=mongodb://localhost:27017/teacher-attendance
+JWT_SECRET=your_secure_jwt_secret
