--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seed": "node scripts/seedDb.js"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +15,14 @@
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.8",
     "body-parser": "^1.20.3",
+    "canvas": "^3.1.0",
     "child_process": "^1.0.2",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "face-api.js": "^0.22.2"
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "face-api.js": "^0.22.2",
+    "mongoose": "^8.14.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
