--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.8",
+    "better-sqlite3": "^11.9.1",
     "body-parser": "^1.20.3",
     "canvas": "^3.1.0",
     "child_process": "^1.0.2",
@@ -21,7 +22,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "face-api.js": "^0.22.2",
+    "face-api.js": "^0.20.0",
+    "mongodb": "^6.16.0",
     "mongoose": "^8.14.1"
   },
   "devDependencies": {
