--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node scripts/seedDb.js"
+    "seed": "node scripts/seedDb.js",
+    "electron:dev": "cd ../frontend && npm run electron:dev",
+    "full": "concurrently \"npm run start\" \"npm run electron:dev\""
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,6 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.8",
-    "better-sqlite3": "^11.9.1",
     "body-parser": "^1.20.3",
     "canvas": "^3.1.0",
     "child_process": "^1.0.2",
@@ -27,6 +28,7 @@
     "mongoose": "^8.14.1"
   },
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "nodemon": "^3.1.7"
   }
 }
