--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ CLOUDINARY_API_KEY=736465974153416
 CLOUDINARY_API_SECRET=l0PjiwqMZVohl4vDi34VlMKnygc
 
 MONGODB_URI=mongodb+srv://admin:admin@cluster0.wlk0tyf.mongodb.net/
+TELEGRAM_BOT_TOKEN=8126908772:AAHLwYm7eQn0s53rIRtA_nVotTqPImJbXtA
