--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "npm run camera:setup && node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seedDb.js",
     "electron:dev": "cd ../frontend && npm run electron:dev",
     "electron:start": "cd ../frontend && npm run electron:start",
     "camera:setup": "sudo modprobe v4l2loopback devices=1 video_nr=10 card_label='VirtualCam' exclusive_caps=1",
-    "camera:stream": "libcamera-vid -t 0 --width 640 --height 480 --framerate 30 --codec yuv420 --output - | ffmpeg -f rawvideo -pix_fmt yuv420p -s 640x480 -i - -f v4l2 -pix_fmt yuv420p /dev/video10",
-    "camera": "npm run camera:modprobe && npm run camera:stream",
-    "full": "concurrently \"npm run start\" \"npm run electron:dev\" "
-  },
+    "camera:stream": "libcamera-vid --nopreview -t 0 --width 640 --height 480 --framerate 30 --codec yuv420 --output - | ffmpeg -f rawvideo -pix_fmt yuv420p -s 640x480 -i - -f v4l2 -pix_fmt yuv420p /dev/video10",
+    "camera": "npm run camera:setup && npm run camera:stream",
+    "full": "concurrently \"npm run start\" \"npm run electron:dev\""
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
